--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Project",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon Server.js"
   },
   "author": "Arthur",
   "license": "ISC",
