--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "lesshat": "^4.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "node-addon-api": "^3.0.0",
